--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a41b4f8
+	base = b3eede7
 	trimbase = 
 	parent = debian/turbulent/rqt_graph
-	previous = 
+	previous = a41b4f8
