--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/rqt_graph
-	previous = 
-	base = a831aee
+	previous = a831aee
+	base = 6701614
 	trim = 
 	trimbase = 
