--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/rqt_graph
-	previous = 
-	base = 5144c8a
+	previous = 5144c8a
+	base = 83ba32c
 	trim = 
 	trimbase = 
