--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rqt_graph
-	previous = 
-	base = 6a5d29c
+	previous = 6a5d29c
+	base = 035f952
 	trim = 
 	trimbase = 
