--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rqt_graph
-	previous = 
-	base = 1fdd93f
+	previous = 1fdd93f
+	base = d9e2c5a
 	trim = 
 	trimbase = 
