--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rqt_graph
-	previous = 
-	base = ffd27ca
+	previous = ffd27ca
+	base = ecff812
 	trim = 
 	trimbase = 
