--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rqt_graph
-	previous = 
-	base = bd58ef2
+	previous = bd58ef2
+	base = f3b2046
 	trim = 
 	trimbase = 
